# pace

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pace/: __init__.py  core.py  explainer.py  preprocessing.py
src/pacex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
