[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacex"
version = "0.1.1"
description = "PACE: Proposal Assembly for Counterfactual Explanations"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Leonidas Christodoulou", email = "lchristodoulou@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.1",
]
keywords = ["counterfactual", "explainability", "xai", "tabular", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/leonidaschristodoulou/pace"
Issues   = "https://github.com/leonidaschristodoulou/pace/issues"

[tool.setuptools.packages.find]
where = ["src"]
